src/App.css
* {
    font-family: 'Markazi Text', serif;
    margin: 0px;
}

h1 {
    font-size: 64px;
    font-weight: 500;
}

h2 {
    font-size: 40px;
    font-weight: 400;
    margin-top: -25px;
    margin-bottom: 10px;
}

h3 {
    font-size: 25px;
    padding: 10px 20px;
}

p {
    font-family: 'Karla', sans-serif;
    font-size: 18px;
    line-height: 1.5;
    max-width: 45ch;
    margin-bottom: 25px;
}

.primary-b {
    background-color: #495E57;
}

.secondary {
    color: #F4CE14;
}

.highlight {
    color: #EDEFEE;
}

.highlight-b {
    background-color: #EDEFEE;
}

.container {
    display: flex;
    width: 66vw;
    margin: auto;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
}

nav {
    padding: 30px 0;
}

a:link {
    font-size: 25px;
    text-decoration: none;
    color: #333333;
}

a:visited {
    color: #F4CE14;
}

a:hover {
    color: #495E57;
    border-style: none none solid none;
    border-color: #495E57;
    border-width: 5px;
    padding-top: 5px;
}

a:active {
    color: #EE9972;
}

section:first-of-type {
    justify-content: space-around;
}

section:first-of-type > div > p {
    width: 25ch;
}

.hero {
    height: 500px;
    width: 400px;
    position: relative;
    top: 50px;
    border-radius: 16px;
}

button, input[type=submit] {
    font-family: 'Karla', sans-serif;
    font-size: 20px;
    font-weight: bold;
    line-height: 2;
    padding: 0 30px;
    background-color: #f4ce14;
    border-radius: 16px;
    box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
}

button:hover {
    color: #EDEFEE;
    background-color: #EE9972;
}

.pad {
    padding: 75px 0 75px 0;
}

#card-image {
    width: 300px;
    height: 250px;
    border-radius: 16px 16px 0 0;
    margin-bottom: -5px;
}

.card-p {
    background-color: #EFEFEE;
    padding: 0 20px 25px 20px;
}

.card-p-2 {
    height: 150px;
    margin-bottom: 0;
}

.bold {
    font-weight: bold;
}

#basket-image {
    height: 30px;
    float: right;
}

.review {
    height: 225px;
    width: 225px;
    padding: 15px 30px;
    background-color: #EFEFEE;
    border-radius: 16px;
}

.review-image {
    height: 75px;
    width: 75px;
}

div > span {
    font-size: 30px;
}

.about-image {
    height: 300px;
    width: 240px;
    border-radius: 16px;
}

.over {
    position: relative;
    bottom: 35px;
    object-fit: cover;
    object-position: 90% 50%;
}

.under {
    position: relative;
    top: 50px;
    right: 100px;
    z-index: -1;
}

footer > nav {
    flex-direction: column;
    width: auto !important;
    margin: 0 !important;
    padding: 0 !important;
}

footer > nav > a:link, footer > ul > li > a:link, footer > ul > li {
    padding: 2px 0;
    color: #EDEFEE;
    font-family: 'Karla', sans-serif;
    font-size: 20px;
    list-style-type: none;
    text-align: center;
}

footer > nav > a:visited, footer > ul > li > a:visited {
    color: #F4CE14;
}

footer > nav > a:hover, footer > ul > li > a:hover {
    color: #333333;
    padding-top: 0;
    border: none;
}

footer > nav > a:active, footer > ul > li > a:active {
    color: #EE9972;
}

footer > nav > img {
    display: none;
}

a > span {
    font-family: 'Karla', sans-serif;
    padding: 0 15px;
}

#reserve-image {
    height: 350px;
    width: 500px;
    border-radius: 16px;
}

#icon {
    display: block;
    height: 100px;
    width: 100px;
    background-color: #333333;
    border-radius: 50px;
}

#back-button {
    padding: 0;
    margin: 75px 25% 0 25%;
    width: 100px;
    background-color:#495E57;
    border-radius: 50px;
}

form label {
    font-size: 30px;
    margin-bottom: -20px;
}

input, select {
    height: 40px;
    font-size: 30px;
    text-align: center;
    background-color: #F4CE14;
    border-radius: 16px;
}

.underline {
    text-decoration: underline;
    margin: 0;
    text-align: center;
}

.grid {
    display: grid;
    width: 66vw;
    padding: 20px 0;
    grid-template-columns: 2fr 1fr 2fr;
    background-color: #EDEFEE;
    gap: 20px;
    margin: auto;
}

.col-1 {
    grid-column: 1/2;
    margin: 0 20px;
}

.col-2 {
    grid-column: 2/3;
}

.col-3 {
    grid-column: 3/4;
    margin: 0 20px;
}

.gap {
    margin-bottom: -20px;
}

.flex-dir {
    flex-direction: column;
}

.center {
    text-align: center;
}

@media (max-width: 600px) {
    .container {
        gap: 10px 0;
    }

    .container > a {
        flex: 100%;
        text-align: center;
    }

    .over, .under {
        top: 0;
        bottom: 0;
        right: -30px;
        z-index: 0;
    }

    footer > nav {
        flex-direction: row;
    }

    .container > nav {
        gap: 0;
    }

    footer ul {
        padding: 0;
    }
}

